--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-saga/core": "^1.1.3",
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.2",
     "encrypt-storage": "^2.2.3",
+    "jwt-decode": "^3.1.2",
+    "localstorage": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "4.0.3",
+    "redux-saga": "^1.1.3",
+    "redux-saga-effects": "^1.1.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
